- Fixing checker bug #2065 with -impredicative-set option.
- Complying with 8.1 heuristic when unification returns several solutions.

Tactics

- Fixing correct binding of quantified hypotheses for induction/destruction
  when used in Ltac.
- Fixing bad parentheses check in "pose (f binders := ...)" syntax.
- Fixing unbalanced parenthesis in Ltac debug trace printer.

Tools and development

- Fixing missing -c option in coq_makefile.
- Temporary hack for coqide.byte "double free or corruption" problem.
- Added support for code development under Bazaar.
- Added support for compilation under Solaris (thanks to Eric Le Lay, #2078).

Changes from V8.1 to V8.2
=========================

Language

- If a fixpoint is not written with an explicit { struct ... }, then 
  all arguments are tried successively (from left to right) until one is 
  found that satisfies the structural decreasing condition.
- New experimental typeclass system giving ad-hoc polymorphism and 
  overloading based on dependent records and implicit arguments.
- New syntax "let 'pat := b in c" for let-binding using irrefutable patterns.
- New syntax "forall {A}, T" for specifying maximally inserted implicit 
  arguments in terms.
- Sort of Record/Structure, Inductive and CoInductive defaults to Type
  if omitted.
- Support for optional "where" notation clauses for record fields.
- (Co)Inductive types can be defined as records 
  (e.g. "CoInductive stream := { hd : nat; tl : stream }.")
- New syntax "Theorem id1:t1 ... with idn:tn" for proving mutually dependent
  statements.
- Support for sort-polymorphism on constants denoting inductive types.
- Several evolutions of the module system (handling of module aliases, 
  functorial module types, an Include feature, etc).
- Prop now a subtype of Set (predicative and impredicative forms).
- Recursive inductive types in Prop with a single constructor of which
  all arguments are in Prop is now considered to be a singleton